--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^18.1.0",
     "chart.js": "^4.4.3",
     "express": "^4.18.2",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "ng2-charts": "^6.0.1",
     "primeng": "^17.18.5",
     "rxjs": "~7.8.0",
@@ -45,6 +46,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-teamcity-reporter": "^1.1.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
     "typescript": "~5.5.2"
